simplify + fix playlist detail spacing

--- a/packages/@coorpacademy-components/src/template/playlist-detail/style.css
+++ b/packages/@coorpacademy-components/src/template/playlist-detail/style.css
@@ -91,6 +91,10 @@
   margin-top: 24px;
 }
 
+.continueLearningSection {
+  padding: 24px 0 32px 0;
+}
+
 @media tablet {
   .ctaContainer {
     flex-direction: column;
